--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean:reports": "rm -rf mochawesome-report/",
+    "cypress:run": "npm run clean:reports && cypress run",
+    "merge:reports": "mochawesome-merge mochawesome-report/*.json > tests-report.json",
+    "create:html:report": "marge --reportDir TestReport tests-report.json",
+    "generate:html:report": "npm run merge:reports && npm run create:html:report"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "cypress": "^4.8.0",
-    "cypress-axe": "^0.8.1"
+    "cypress-axe": "^0.8.1",
+    "mocha": "^8.0.1",
+    "mochawesome": "^6.1.1",
+    "mochawesome-merge": "^4.1.0",
+    "mochawesome-report-generator": "^5.1.0"
   }
 }
