upgrade Cypress to latestversion

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^4.8.0",
-    "cypress-axe": "^0.8.1",
+    "axe-core": "^4.2.2",
+    "cypress": "7.5.0",
+    "cypress-axe": "0.12.2",
     "mocha": "^8.0.1",
     "mochawesome": "^6.1.1",
     "mochawesome-merge": "^4.1.0",
