--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "license": "ISC",
   "devDependencies": {
     "axe-core": "^4.2.2",
-    "cypress": "7.5.0",
-    "cypress-axe": "0.12.2",
-    "mocha": "^8.0.1",
-    "mochawesome": "^6.1.1",
-    "mochawesome-merge": "^4.1.0",
-    "mochawesome-report-generator": "^5.1.0"
+    "cypress": "9.6.1",
+    "cypress-axe": "0.14.0",
+    "mocha": "10.0.0",
+    "mochawesome": "7.1.3",
+    "mochawesome-merge": "4.2.1",
+    "mochawesome-report-generator": "6.2.0"
   }
 }
