--- a/package.json
+++ b/package.json
@@ -4,21 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean:reports": "rm -rf mochawesome-report/",
-    "cypress:run": "npm run clean:reports && cypress run",
-    "merge:reports": "mochawesome-merge mochawesome-report/*.json > tests-report.json",
-    "create:html:report": "marge --reportDir TestReport tests-report.json",
-    "generate:html:report": "npm run merge:reports && npm run create:html:report"
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "axe-core": "^4.2.2",
-    "cypress": "9.6.1",
-    "cypress-axe": "0.14.0",
-    "mocha": "10.0.0",
-    "mochawesome": "7.1.3",
-    "mochawesome-merge": "4.2.1",
-    "mochawesome-report-generator": "6.2.0"
+    "cypress": "10.3.1",
+    "cypress-axe": "1.0.0"
   }
 }
